# rust-for-js-demo

./: Cargo.toml  index.html  package.json  styles.css
_solution/: lib.rs  main.rs
src/: main.js
